# zanka

./: CMakeLists.txt  README.md  conanfile.txt
src/: zanka.cpp  zanka_old.cpp
